--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
+    "nodemailer": "^7.0.10",
     "zod": "^3.24.4"
   }
 }
