update some api

--- a/.env
+++ b/.env
@@ -32,3 +32,8 @@ BREVO_EMAIL=ahmedpolash732@gmail.com
 
 #STRIPE 
 # STRIPE_SECRET_KEY=
+
+#cloudinary 
+CLOUDINARY_API_SECRET="YXM_P0Gbg2vuCwVRuVKrTcTxDbg"
+CLOUDINARY_CLOUD_NAME="dylvitw9y"
+CLOUDINARY_API_KEY="584658467188859"
