--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/cookie-parser": "^1.4.9",
     "@types/cors": "^2.8.18",
+    "@types/ejs": "^3.1.5",
     "@types/express": "^5.0.1",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/multer": "^2.0.0",
@@ -52,6 +53,7 @@
     "multer": "^2.0.2",
     "nodemailer": "^7.0.10",
     "pg": "^8.16.3",
+    "puppeteer": "^24.34.0",
     "zod": "^3.24.4"
   }
 }
