--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,8 @@ SUPER_ADMIN_PASSWORD=123456
 BACKEND_URL=http://localhost:5000
 FRONTEND_URL=http://localhost:3000
  
+
+#cloudinary 
+CLOUDINARY_API_SECRET=""
+CLOUDINARY_CLOUD_NAME=""
+CLOUDINARY_API_KEY=""
