mail system have changes

--- a/.env
+++ b/.env
@@ -5,6 +5,7 @@ HOST=localhost
 
 # Database
 DATABASE_URL="postgresql://postgres:postgres@localhost:5432/dbname"
+#DATABSE_URL="mongodb+srv://<db_username>:<db_password>@cluster0.yrssrk8.mongodb.net/(PROJECT_NAME)?appName=Cluster0"
  
 # DATABASE_URL="postgresql://neondb_owner:npg_hWwAyGqp7L2s@ep-frosty-shape-ad7x4x8b-pooler.c-2.us-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require"
 
@@ -15,20 +16,25 @@ JWT_ACCESS_EXPIRES_IN="2y"
 JWT_REFRESH_EXPIRES_IN="5y"
 
 # Super Admin Credentials
-SUPER_ADMIN_EMAIL=admin@example.com
-SUPER_ADMIN_PASSWORD=123456
+SUPER_ADMIN_EMAIL="admin@example.com"
+SUPER_ADMIN_PASSWORD="123456"
 
 # URLs
-BACKEND_URL=http://localhost:5000
-FRONTEND_URL=http://localhost:3000
-FILE_URL=http://localhost:5000/uploads
+BACKEND_URL="http://localhost:5000"
+FRONTEND_URL="http://localhost:3000"
+FILE_URL="http://localhost:5000/uploads"
 
 
 #Brevo
-BREVO_USER=9a33ee001@smtp-brevo.com
-BREVO_PASS=bski9elW2KYKy9j
-BREVO_EMAIL=ahmedpolash732@gmail.com
+BREVO_USER="9a33ee001@smtp-brevo.com"
+BREVO_PASS="bski9elW2KYKy9j"
+BREVO_EMAIL="ahmedpolash732@gmail.com"
+SMTP_HOST="smtp-relay.brevo.com"
+SMTP_PORT=587
+SMTP_NAME='TEST'
 
+# OTP
+OTP_EXPIRY_MINUTES=5
 
 #STRIPE 
 # STRIPE_SECRET_KEY=
