--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "nodemailer": "^7.0.10",
     "pg": "^8.16.3",
     "puppeteer": "^24.34.0",
+    "winston": "^3.19.0",
     "zod": "^3.24.4"
   }
 }
